# cuentitos

./: .gitignore  CLAUDE.md  Cargo.toml  DEV.md  README.md  REFACTOR.md  TODO.md
.claude/: settings.json  settings.local.json
.cubil/backlog/: definition-of-enum-variables-implementation.md  definition-of-float-variables-implementation.md  definition-of-integer-variables-compatibility-tests.md  definition-of-integer-variables-implementation.md  logical-operators-in-req-implementation.md  logical-operators-in-req.md  require-bool-variables-compatibility-tests.md  require-integer-variables-implementation.md  require-string-variables-compatibility-tests.md  set-bool-variables-compatibility-tests.md  set-enum-variables-compatibility-tests.md  set-integer-variables-compatibility-tests.md  set-string-variables-implementation.md  substring-matching-in-req-for-strings-future.md
.cubil/doing/: definition-of-bool-variables-implementation.md  definition-of-enum-variables-compatibility-tests.md  definition-of-float-variables-compatibility-tests.md  extract-arithmetic-parser-from-variables-parser-rs.md  logical-operators-in-req-compatibility-tests.md
.cubil/done/: definition-of-bool-variables-compatibility-tests.md  definition-of-enum-variables-compatibility-tests.md  definition-of-integer-variables-compatibility-tests.md  definition-of-integer-variables-implementation.md  definition-of-string-variables-compatibility-tests.md  definition-of-string-variables-implementation.md  logical-operators-in-req-compatibility-tests.md  logical-operators-in-req-implementation.md  require-bool-variables-implementation.md  require-enum-variables-compatibility-tests.md  require-enum-variables-implementation.md  require-float-variables-compatibility-tests.md  require-float-variables-implementation.md  require-integer-variables-compatibility-tests.md  require-string-variables-implementation.md  set-bool-variables-implementation.md  set-enum-variables-compatibility-tests.md  set-enum-variables-implementation.md  set-float-variables-compatibility-tests.md  set-float-variables-implementation.md  set-integer-variables-implementation.md  set-string-variables-compatibility-tests.md
.cubil/roadmaps/: all-variable-types.md
.cursor/rules/: project-description.mdc  rust.mdc
.github/workflows/: build.yaml  ci.yaml  rust.yml
.skulk/: config.toml  init.sh.example
architecture/: 000001-compatibility-tests.md  README.md
bindings/c/: build.sh  cuentitos.c  cuentitos.cpp  cuentitos.h  cuentitos.hpp
bindings/ue5/: build.sh  cuentitos  cuentitos.c  cuentitos.cpp  (+1 more)
cli/: Cargo.toml  README.md
cli-2/: Cargo.toml
cli-2/src/: console.rs  main.rs
cli/fixtures/: cuentitos.db  en.csv  script
cli/src/: console.rs  main.rs
common/: Cargo.toml
compat/: Cargo.toml
compat/src/: main.rs  test_case.rs  test_runner.rs
compatibility-tests/: 00000000001-single-line-and-end.md  00000000001-two-lines-and-end.md  00000000001-two-lines-and-skip.md  00000000002-two-lines-and-end.md  00000000006-section-id-duplicate.md  00000000007-tab-indentation-error.md  00000000008-section-indentation-jump-error.md  00000000009-nested-strings-with-siblings.md  00000000010-invalid-indentation-error.md  00000000011-basic-section.md  00000000011-sections-and-subsections.md  00000000012-nested-sections.md  00000000012-section-nesting-error.md  00000000013-section-without-title.md  00000000014-subsection-without-parent.md  00000000015-invalid-section-indentation.md  00000000016-duplicate-section-names.md  00000000017-duplicate-section-names-root.md  00000000018-duplicate-section-names-different-levels.md  00000000019-duplicate-section-names-multiple-errors.md  00000000021-comment-before-text.md  00000000025-comments-in-sections.md  00000000026-comments-at-different-indentation-levels.md  00000000027-comments-with-arbitrary-indentation.md  00000000028-empty-comment.md  00000000029-comment-with-whitespace-before.md  00000000035-jump-backward.md  00000000038-jump-to-parent.md  00000000039-restart-current-section.md  00000000041-jump-up-multiple-levels.md  00000000042-chain-jumps.md  00000000045-multiple-jumps-in-section.md  00000000047-jump-from-indented-context.md  00000000048-jump-to-section-with-only-jump.md  00000000050-section-names-special-chars.md  00000000052-section-not-found-absolute.md  00000000053-section-not-found-relative.md  00000000054-malformed-empty-reference.md  00000000055-malformed-trailing-backslash.md  00000000056-malformed-no-space-after-arrow.md  (+95 more)
compiler/: .csv  Cargo.toml  README.md  cuentitos.db  en.csv
compiler-wasm/: Cargo.toml
compiler-wasm/src/: lib.rs
compiler-wasm/www/: index.js  package-lock.json  package.json
compiler/fixtures/: config.toml  cuentitos.toml
compiler/fixtures/events/: 01-basic.event  02-choices.event  03-results.event  04-requirements.event  05-modifiers.event  06-settings.event
compiler/fixtures/items/: 00-moon-wolf.item  01-mushroom.item  02-dirt.item
compiler/fixtures/locales/: es.csv
compiler/src/: config.rs  i18n.rs  lib.rs  main.rs  parsable.rs  parser.rs
compiler/src/parsers/: event.rs  event_requirement.rs  item.rs  mod.rs  modifier.rs
definitions/: cli.md  cuentitos.md  existing-rutnime.md  palabritas.md  resources.md  runtime.md  variables.md
docs/: cli-spec.md  compatibility-test-format.md  language.md
examples/: cuentitos.toml  story-example.cuentitos
godot/: Cargo.toml
godot/src/: dance.cuentitos  lib.rs  output.rs
language/: README.md
palabritas/: Cargo.toml
palabritas-common/: Cargo.toml
palabritas-compiler/: Cargo.toml
palabritas-compiler/src/: lib.rs
palabritas-parser/: Cargo.toml  example.palabritas
parser/: Cargo.toml
runtime/: Cargo.toml  README.md
runtime-2/: Cargo.toml
runtime-c/: Cargo.toml
runtime-c/src/: lib.rs
runtime-wasm/: Cargo.toml  LICENSE_MIT  package-lock.json
runtime/fixtures/: database.mp  state_save.mp
runtime/src/: error.rs  game_state.rs  lib.rs  main.rs  runtime.rs  runtime_datatypes.rs  runtime_state.rs
runtime/src/tests/: section.rs
tests/: README.md
website/: Cargo.toml  README.md
(+588 files in other folders)
