[package]
name = "cuentitos-cli-2"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cuentitos-2"
path = "src/main.rs"

[dependencies]
# serde = { version = "1.0.144", features = ["derive"] }
# rmp-serde = "1.1.1"
clap = { version = "4.0.17", features = ["derive"] }
palabritas-compiler = { path = "../palabritas-compiler" }
cuentitos-runtime-2 = { path = "../runtime-2" }
regex = "1.7.0"
notify = "5.1.0"
