[package]
name = "cuentitos-cli"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cuentitos"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
cuentitos-compiler = { path = "../compiler" }
cuentitos-runtime = { path = "../runtime" }
palabritas = { path = "../palabritas" }
regex = "1.7.0"
pest = "2.0"
rustyline = "12.0.0"
