[package]
name = "cuentitos"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
cuentitos-common = { path = "../common" }
cuentitos-parser = { path = "../parser" }
