[package]
name = "cuentitos-compat"
version = "0.3.0"
edition = "2021"
default-run = 'cuentitos-compat'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
glob = "0.3.1"
cuentitos-common = { path = "../common" }
