[package]
name = "cuentitos-compiler-wasm"
version = "0.3.0"
authors = ["Fran Tufro <hi@frantufro.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
cuentitos-compiler = { path = "../compiler" }
serde = { version = "1.0.144", features = ["derive"] }
rmp-serde = "1.1.1"
rmp = "^0.8"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.69"
serde_json = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
