[package]
name = "cuentitos-compiler"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cuentitos"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
rmp-serde = "1.1.1"
clap = { version = "4.0.17", features = ["derive"] }
cuentitos-common = { path = "../common" }
toml = "0.5.9"