[package]
name = "cuentitos-godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
cuentitos-common = { path = "../common" }
cuentitos-compiler = { path = "../compiler" }
cuentitos-runtime = { path = "../runtime" }
serde = { version = "1.0.144", features = ["derive"] }
rmp-serde = "1.1.1"
serde_json = "1.0.113"