[package]
name = "cuentitos-runtime-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
cuentitos-common = { path = "../common" }
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.144", features = ["derive"] }
rmp-serde = "1.1.1"
rmp = "^0.8"
