[package]
name = "cuentitos-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
palabritas-common = { path = "../palabritas-common" }
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.144", features = ["derive"] }
rmp-serde = "1.1.1"
rmp = "^0.8"
